security.tf
# Create a Network Security Group and rules

# Create NSG Management
resource "azurerm_network_security_group" "mgmtnsg" {
  name                = "student${local.setup.azure.student_number}-mgmtnsg"
  location            = local.setup.azure.location
  resource_group_name = local.setup.azure.resource_group

  security_rule {
    name                       = "allow_SSH"
    description                = "Allow SSH access"
    priority                   = 100
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "Tcp"
    source_port_range          = "*"
    destination_port_range     = "22"
    source_address_prefix      = "*"
    destination_address_prefix = "*"
  }

  security_rule {
    name                       = "allow_HTTPS"
    description                = "Allow HTTPS access"
    priority                   = 110
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "Tcp"
    source_port_range          = "*"
    destination_port_range     = "443"
    source_address_prefix      = "*"
    destination_address_prefix = "*"
  }
  
  tags = {
    name        = "student${local.setup.azure.student_number}-mgmtnsg"
    environment = local.setup.azure.environment
  }
}

# Create NSG External
resource "azurerm_network_security_group" "extnsg" {
  name                = "student${local.setup.azure.student_number}-extnsg"
  location            = local.setup.azure.location
  resource_group_name = local.setup.azure.resource_group

  security_rule {
    name                       = "allow_HTTP"
    description                = "Allow HTTP access"
    priority                   = 100
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "Tcp"
    source_port_range          = "*"
    destination_port_range     = "80"
    source_address_prefix      = "*"
    destination_address_prefix = "*"
  }

  security_rule {
    name                       = "allow_HTTPS"
    description                = "Allow HTTPS access"
    priority                   = 110
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "Tcp"
    source_port_range          = "*"
    destination_port_range     = "443"
    source_address_prefix      = "*"
    destination_address_prefix = "*"
  }

  security_rule {
    name                       = "allow_DNS"
    description                = "Allow HTTPS access"
    priority                   = 120
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "Udp"
    source_port_range          = "*"
    destination_port_range     = "53"
    source_address_prefix      = "*"
    destination_address_prefix = "*"
  }

  tags = {
    name        = "student${local.setup.azure.student_number}-extnsg"
    environment = local.setup.azure.environment
  }
}

# Create NSG Internal
resource "azurerm_network_security_group" "intnsg" {
  name                = "student${local.setup.azure.student_number}-intnsg"
  location            = local.setup.azure.location
  resource_group_name = local.setup.azure.resource_group

  security_rule {
    name                       = "allow_ALL"
    description                = "Allow ALL"
    priority                   = 100
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "*"
    source_port_range          = "*"
    destination_port_range     = "*"
    source_address_prefix      = "*"
    destination_address_prefix = "*"
  }

  tags = {
    name        = "student${local.setup.azure.student_number}-intnsg"
    environment = local.setup.azure.environment
  }
}
